--- a/packages/client/i18n/locales/en.yaml
+++ b/packages/client/i18n/locales/en.yaml
@@ -12,6 +12,9 @@ common:
 panic_confirm:
   body: An unexpected error has occurred!
   accept: Reload the page
+sw_update:
+  body: A new version of the application is available!
+  accept: Reload the page
 locale:
   changed: The locale has been changed to "{{new_locale}}"
 nav:
