feat: use `common_vendor` crate as a gate for external dependencies

--- a/packages/client/i18n/Cargo.toml
+++ b/packages/client/i18n/Cargo.toml
@@ -12,9 +12,9 @@ workspace = true
 path = "lib.rs"
 
 [dependencies]
+common.workspace = true
 leptos.workspace = true
 leptos_i18n.workspace = true
-paste.workspace = true
 serde.workspace = true
 
 [package.metadata.leptos-i18n]
